FireAlarmApplication.Web/mtg_debug_20260127_143530.txt

=== MTG FIRE DEBUG ===
Time: 2026-01-27 14:35:30
NetCDF: C:\Users\kubil\AppData\Local\Temp\9c0facdb-2f8d-46f1-858b-9d9bdc613d4d.nc

=== PYTHON STDERR (Debug Output) ===
  File "C:\Users\kubil\source\repos\FireAlarmApplication\FireAlarmApplication.Web\Scripts\parse_mtg_fire.py", line 32
    max_lat = float(parts[2])x""
                             ^
SyntaxError: invalid syntax


=== PYTHON STDOUT (JSON Output) ===


=== EXIT CODE ===
1
